# chrome-cdp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
agents/pr-healer/tools/: list-prs.sh  load-progress.sh  record-progress.sh
src/: browser.rs  connection.rs  error.rs  lib.rs  page.rs
tests/: integration_test.rs
