[package]
name = "chrome-cdp"
version = "0.1.0"
edition = "2021"
authors = ["sonesuke"]
description = "A Rust library for Chrome DevTools Protocol"

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
integration-tests = []
